[package]
name = "uniswap-v3-rs"
version = "0.1.0"
edition = "2024"
description = "Opinionated Alloy-native Uniswap V3 SDK for Rust"
license = "MIT"
authors = ["Ruslan Akhtariev"]
repository = "https://github.com/pysel/uniswap-v3-rs"
homepage = "https://github.com/pysel/uniswap-v3-rs"
documentation = "https://docs.rs/uniswap-v3-rs"
readme = "README.md"
keywords = ["uniswap", "ethereum", "defi", "alloy", "amm"]
categories = ["cryptography::cryptocurrencies", "api-bindings", "asynchronous"]
include = [
    "src/**/*",
    "artifacts/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[workspace]
members = [".", "bin"]
default-members = ["bin"]
resolver = "2"

[features]
default = ["swap", "positions"]
swap = []
positions = []

[dependencies]
alloy = { version = "2.2.0", features = ["json", "reqwest", "provider-http", "signer-local"] }
alloy-primitives = "1.6.1"
thiserror = "2.0.19"
tokio = { version = "1.53.1", features = ["rt-multi-thread"] }
uniswap-sdk-core = "6.0.0"
uniswap_v3_math = "0.6.2"
